fixed minor styling in css for buttons

--- a/views/show.jade
+++ b/views/show.jade
@@ -18,4 +18,4 @@ block content
             td #{log.team1_score} - #{log.team2_score}
           else 
             td #{log.team2_score} - #{log.team1_score}
-    a.btn.btn-primary(href="/teams") Back
+    a.btn.btn-primary(href="/teams" class='backBtn') Back
