--- a/views/teams.jade
+++ b/views/teams.jade
@@ -16,6 +16,6 @@ block content
             a(href='/teams/#{team.id}') #{team.teamName}
           td #{team.stats[0].wins} : #{team.stats[0].losses}
           td #{team.stats[0].pointDiff}
-      a.btn.btn-primary(href="/") Back
+      a.btn.btn-primary(href="/" class='backBtn') Back
 
             
