added points for and points against to DB

--- a/views/teams.jade
+++ b/views/teams.jade
@@ -10,7 +10,7 @@ block content
         th Record (Wins:Losses)
         th Point Differential
         th Win Percentage
-        th Total Points
+        th Points For
     tbody
       each team in teams
         tr
@@ -22,7 +22,7 @@ block content
             td #{(team.stats[0].wins/(team.stats[0].wins + team.stats[0].losses)*100).toFixed()}%
           else
             td 0%
-          td #{team.stats[0].pointsFor + team.stats[0].pointsAgainst}
+          td #{team.stats[0].pointsFor}
       a.btn.btn-primary(href="/" class='backBtn') Back
 
             
