--- a/views/teams.jade
+++ b/views/teams.jade
@@ -1,28 +1,26 @@
 extends layout
 
 block content
-  h1 Current Team Standings
-  div
-  table.table.table-hover.table-bordered 
-    thead
-      tr
-        th Team name
-        th Record (Wins:Losses)
-        th Point Differential
-        th Win Percentage
-        th Points For
-    tbody
-      each team in teams
-        tr
-          td 
-            a(href='/teams/#{team.id}') #{team.teamName}
-          td #{team.stats[0].wins} : #{team.stats[0].losses}
-          td #{team.stats[0].pointDiff}
-          if team.stats[0].wins > 0
-            td #{(team.stats[0].wins/(team.stats[0].wins + team.stats[0].losses)*100).toFixed()}%
-          else
-            td 0%
-          td #{team.stats[0].pointsFor}
-      a.btn.btn-primary(href="/" class='backBtn') Back
-
-            
+	h1 Current Team Standings
+	div
+	table.table.table-hover.table-bordered 
+		thead
+			tr
+				th Team name
+				th Record (Wins:Losses)
+				th Point Differential
+				th Win Percentage
+				th Seed
+		tbody
+			each team in teams
+				tr
+					td 
+						a(href='/teams/#{team.id}') #{team.teamName}
+					td #{team.stats[0].wins} : #{team.stats[0].losses}
+					td #{team.stats[0].pointDiff}
+					if team.stats[0].wins > 0
+						td #{(team.stats[0].wins/(team.stats[0].wins + team.stats[0].losses)*100).toFixed()}%
+					else
+						td 0%
+					td #{team.stats[0].seed}
+			a.btn.btn-primary(href="/" class='backBtn') Back
